syntax = "proto3";

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

package model;

option go_package = "github.com/axsh/openvdc/model";

message AgentNode {
  string agent_mesos_id = 1;
  string agent_id = 2;
  google.protobuf.Timestamp created_at = 3;
}
